--- a/dedsec/components/dialogs/launch_payload_dialog.json
+++ b/dedsec/components/dialogs/launch_payload_dialog.json
@@ -14,7 +14,7 @@
   "background": {
     "layers": [
       { "image_path": "assets/launch_payload_dialog/launch_payload_bg.png", "x": 0, "y": 0 },
-      { "variable_name": "$_INPUT_NAME", "x":  30, "y": 76, "string_template": {"text_size": "small", "max_chars": 22, "wrap_text": false, "max_lines": 1 }}
+      { "variable_name": "$_INPUT_NAME", "x":  50, "y": 60, "string_template": {"text_size": "small", "max_chars": 22, "wrap_text": false, "max_lines": 1, "text_color_palette": "magenta" }}
     ]
   },
   "menu_items": [
